# photos-app

./: .env_sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: db_checker.py  exceptions.py  pagination.py  settings.py  urls.py  utils.py  views.py
app/middlewares/: __init__.py  authentication.py  contextual_logging.py
logs/: Readme.md
photos/: admin.py  models.py  serializers.py  urls.py  views.py
photos/migrations/: 0001_initial.py  0002_alter_photocollaboration_unique_together_and_more.py
